--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,9 @@ deps =
     django19: Django==1.9
     django18: Django==1.8.5
     py{27,33,34,35,36,py}: -r{toxinidir}/requirements/test.txt
+
+[travis]
+python =
+  2.7: py27
+  3.6: py36
+  pypy: pypy
